// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Questionnaires should render a notification when there are unread comments 1`] = `
.c11 {
  padding: 0.8em 3em;
  border-radius: 2px;
  font-size: 0.8em;
  font-weight: 400;
  cursor: pointer;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-transition: background-color 200ms ease-out;
  transition: background-color 200ms ease-out;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  position: relative;
  overflow: hidden;
  background-color: #056C99;
  color: white;
  position: relative;
  border: none;
}

.c11:focus,
.c11:active {
  outline: none;
}

.c11[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c11:focus,
.c11:hover {
  background-color: #034968;
}

.c12 {
  padding: 0.8em 3em;
  border-radius: 2px;
  font-size: 0.8em;
  font-weight: 400;
  cursor: pointer;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-transition: background-color 200ms ease-out;
  transition: background-color 200ms ease-out;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  position: relative;
  overflow: hidden;
  background-color: white;
  color: #4A4A4A;
  border: 1px #EAEAEA solid;
}

.c12:focus,
.c12:active {
  outline: none;
}

.c12[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c12:focus,
.c12:hover {
  background-color: #EAEAEA;
}

.c21 {
  padding: 0.8em 3em;
  border-radius: 2px;
  font-size: 0.8em;
  font-weight: 400;
  cursor: pointer;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-transition: background-color 200ms ease-out;
  transition: background-color 200ms ease-out;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  position: relative;
  overflow: hidden;
}

.c21:focus,
.c21:active {
  outline: none;
}

.c21[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 *:not(:last-child) {
  margin-right: 1em;
}

.c14 {
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
}

.c13 {
  padding: 2em 2.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0 0.5em;
  min-width: 16.666666666666664%;
  max-width: 16.666666666666664%;
  margin-left: 0;
}

.c3:first-child {
  padding-left: 0;
}

.c3:last-child:not(:only-child) {
  padding-right: 0;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0 0.5em;
  min-width: NaN%;
  max-width: NaN%;
  margin-left: 0;
}

.c5:first-child {
  padding-left: 0;
}

.c5:last-child:not(:only-child) {
  padding-right: 0;
}

.c1 {
  height: 4em;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #35414D;
  color: #FFFFFF;
  font-weight: 400;
  padding: 1em 1.5em;
}

.c4 {
  color: white;
  position: relative;
  text-decoration: none;
}

.c0 {
  background-color: #f5f5f5;
  min-height: 100vh;
  min-width: 80em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  text-decoration: none;
  color: #056C99;
  opacity: 1;
  -webkit-transition: opacity .2s ease-in-out;
  transition: opacity .2s ease-in-out;
  width: 260px;
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c19:hover {
  opacity: .7;
}

.c7 {
  width: 100%;
  max-width: 55em;
  margin: 0 auto;
}

.c8 {
  font-size: 0.6em;
  text-transform: uppercase;
  font-weight: 900;
  line-height: 1.5;
  margin: 3em 0 1.5em 0;
}

.c9 {
  margin: 0 0 1em 0;
}

.c15 {
  width: 100%;
  font-size: .8em;
  border-collapse: collapse;
}

.c16 {
  color: #8e8e8e;
  text-align: center;
  padding-bottom: 1.5em;
}

.c16:nth-child(1) {
  text-align: left;
}

.c17 {
  border-top: 1px solid #e2e2e2;
  opacity: 1;
  height: 2em;
}

.c17.row-exit {
  opacity: 0.01;
  height: 0em;
  -webkit-transition: opacity 300ms ease-out,height 150ms ease-out 150ms;
  transition: opacity 300ms ease-out,height 150ms ease-out 150ms;
}

.c18 {
  padding: 1.1em;
  text-align: center;
}

.c18:nth-child(1) {
  padding-left: 0;
}

.c18:nth-child(6) {
  padding-right: 0;
}

.c18:nth-child(1),
.c18:nth-child(6) {
  text-align: left;
}

.c20 {
  width: 16px;
  height: 20px;
  padding: .5em;
  background: url(trashIcon.svg) no-repeat;
  background-size: contain;
  border: 0;
}

.c20:hover {
  opacity: 0.7;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

<Questionnaires
  onDeleteQuestionnaire={[Function]}
  questionnaires={
    Array [
      Object {
        "actions": Object {
          "delete": true,
        },
        "comments": Object {
          "comments": 10,
          "count": 0,
          "unread": true,
        },
        "createdAt": "01/01/1970",
        "id": 1,
        "sections": Array [
          Object {
            "id": 5,
            "pages": Array [
              Object {
                "id": 10,
              },
            ],
          },
        ],
        "theme": "default",
        "title": "Test questionnaire",
      },
    ]
  }
>
  <BaseLayout>
    <App>
      <ThemeProvider
        theme={
          Object {
            "colors": Object {
              "blue": "#056C99",
              "borders": "#EAEAEA",
              "darkBlue": "#4E565F",
              "darkGrey": "#35414D",
              "lightBlue": "#61BDE0",
              "lightGrey": "#c3c3c3",
              "orange": "#F5A623",
              "red": "#BB1717",
              "text": "#4A4A4A",
              "white": "#FFFFFF",
            },
            "radius": "2px",
            "shadow": "0 2px 4px rgba(0,0,0,0.1)",
          }
        }
      >
        <BaseLayout__Wrapper>
          <div
            className="c0"
          >
            <Header>
              <Header__StyledHeader>
                <header
                  className="c1"
                >
                  <Grid__Grid
                    align="center"
                    fillHeight={true}
                  >
                    <div
                      className="c2"
                    >
                      <Column__Column
                        cols={2}
                      >
                        <div
                          className="c3"
                          cols={2}
                        >
                          <Header__Logo
                            to="/"
                          >
                            <Link
                              className="c4"
                              replace={false}
                              to="/"
                            >
                              <a
                                className="c4"
                                href="/"
                                onClick={[Function]}
                              >
                                <img
                                  alt="Dahl"
                                  src="logo.svg"
                                />
                              </a>
                            </Link>
                          </Header__Logo>
                        </div>
                      </Column__Column>
                      <Column__Column>
                        <div
                          className="c5"
                        />
                      </Column__Column>
                      <Column__Column>
                        <div
                          className="c5"
                        />
                      </Column__Column>
                    </div>
                  </Grid__Grid>
                </header>
              </Header__StyledHeader>
            </Header>
            <BaseLayout__Main>
              <main
                className="c6"
              >
                <QuestionnairesPage__Center>
                  <div
                    className="c7"
                  >
                    <QuestionnairesPage__Title>
                      <h2
                        className="c8"
                      >
                        Your questionnaires
                      </h2>
                    </QuestionnairesPage__Title>
                    <QuestionnairesPage__StyledButtonGroup
                      horizontal={true}
                    >
                      <ButtonGroup
                        className="c9"
                        horizontal={true}
                      >
                        <ButtonGroup__StyledButtonGroup
                          className="c9"
                          horizontal={true}
                        >
                          <div
                            className="c9 c10"
                          >
                            <withRouter(LB)
                              id="btn-create-questionnaire"
                              primary={true}
                              to="/questionnaire/create"
                            >
                              <Route
                                render={[Function]}
                              >
                                <LB
                                  history={
                                    Object {
                                      "_listeners": Array [],
                                      "_notifyListeners": [Function],
                                      "action": "POP",
                                      "createHref": [Function],
                                      "listen": [Function],
                                      "location": Object {
                                        "hash": "",
                                        "key": "arhdne",
                                        "pathname": "/",
                                        "search": "",
                                      },
                                      "push": [Function],
                                      "replace": [Function],
                                    }
                                  }
                                  id="btn-create-questionnaire"
                                  location={
                                    Object {
                                      "hash": "",
                                      "key": "arhdne",
                                      "pathname": "/",
                                      "search": "",
                                    }
                                  }
                                  match={
                                    Object {
                                      "isExact": true,
                                      "params": Object {},
                                      "path": "/",
                                      "url": "/",
                                    }
                                  }
                                  primary={true}
                                  to="/questionnaire/create"
                                >
                                  <Button
                                    id="btn-create-questionnaire"
                                    location={
                                      Object {
                                        "hash": "",
                                        "key": "arhdne",
                                        "pathname": "/",
                                        "search": "",
                                      }
                                    }
                                    match={
                                      Object {
                                        "isExact": true,
                                        "params": Object {},
                                        "path": "/",
                                        "url": "/",
                                      }
                                    }
                                    onClick={[Function]}
                                    primary={true}
                                    type="button"
                                  >
                                    <Button__StyledButton
                                      id="btn-create-questionnaire"
                                      location={
                                        Object {
                                          "hash": "",
                                          "key": "arhdne",
                                          "pathname": "/",
                                          "search": "",
                                        }
                                      }
                                      match={
                                        Object {
                                          "isExact": true,
                                          "params": Object {},
                                          "path": "/",
                                          "url": "/",
                                        }
                                      }
                                      onClick={[Function]}
                                      primary={true}
                                      type="button"
                                    >
                                      <button
                                        className="c11"
                                        id="btn-create-questionnaire"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        Create
                                      </button>
                                    </Button__StyledButton>
                                  </Button>
                                </LB>
                              </Route>
                            </withRouter(LB)>
                            <Button
                              disabled={true}
                              id="btn-load-questionnaire"
                              secondary={true}
                            >
                              <Button__StyledButton
                                disabled={true}
                                id="btn-load-questionnaire"
                                secondary={true}
                              >
                                <button
                                  className="c12"
                                  disabled={true}
                                  id="btn-load-questionnaire"
                                >
                                  Upload
                                </button>
                              </Button__StyledButton>
                            </Button>
                          </div>
                        </ButtonGroup__StyledButtonGroup>
                      </ButtonGroup>
                    </QuestionnairesPage__StyledButtonGroup>
                    <Panel__CenteredPanel>
                      <Panel__Panel
                        className="c13"
                      >
                        <div
                          className="c13 c14"
                        >
                          <ExistingQuetionnairesTable
                            onDeleteQuestionnaire={[Function]}
                            questionnaires={
                              Array [
                                Object {
                                  "actions": Object {
                                    "delete": true,
                                  },
                                  "comments": Object {
                                    "comments": 10,
                                    "count": 0,
                                    "unread": true,
                                  },
                                  "createdAt": "01/01/1970",
                                  "id": 1,
                                  "sections": Array [
                                    Object {
                                      "id": 5,
                                      "pages": Array [
                                        Object {
                                          "id": 10,
                                        },
                                      ],
                                    },
                                  ],
                                  "theme": "default",
                                  "title": "Test questionnaire",
                                },
                              ]
                            }
                          >
                            <QuestionnairesPage__Table>
                              <table
                                className="c15"
                              >
                                <thead>
                                  <tr>
                                    <QuestionnairesPage__TH>
                                      <th
                                        className="c16"
                                      >
                                        Questionnaire name
                                      </th>
                                    </QuestionnairesPage__TH>
                                    <QuestionnairesPage__TH>
                                      <th
                                        className="c16"
                                      >
                                        Date
                                      </th>
                                    </QuestionnairesPage__TH>
                                    <QuestionnairesPage__TH>
                                      <th
                                        className="c16"
                                      >
                                        Theme
                                      </th>
                                    </QuestionnairesPage__TH>
                                    <QuestionnairesPage__TH>
                                      <th
                                        className="c16"
                                      >
                                        Status
                                      </th>
                                    </QuestionnairesPage__TH>
                                    <QuestionnairesPage__TH>
                                      <th
                                        className="c16"
                                      >
                                        Comments
                                      </th>
                                    </QuestionnairesPage__TH>
                                    <QuestionnairesPage__TH>
                                      <th
                                        className="c16"
                                      />
                                    </QuestionnairesPage__TH>
                                  </tr>
                                </thead>
                                <TransitionGroup
                                  childFactory={[Function]}
                                  component={[Function]}
                                  enter={false}
                                >
                                  <TBody>
                                    <tbody>
                                      <CSSTransition
                                        classNames="row"
                                        enter={false}
                                        in={true}
                                        onDeleteQuestionnaire={[Function]}
                                        onExited={[Function]}
                                        questionnaires={
                                          Array [
                                            Object {
                                              "actions": Object {
                                                "delete": true,
                                              },
                                              "comments": Object {
                                                "comments": 10,
                                                "count": 0,
                                                "unread": true,
                                              },
                                              "createdAt": "01/01/1970",
                                              "id": 1,
                                              "sections": Array [
                                                Object {
                                                  "id": 5,
                                                  "pages": Array [
                                                    Object {
                                                      "id": 10,
                                                    },
                                                  ],
                                                },
                                              ],
                                              "theme": "default",
                                              "title": "Test questionnaire",
                                            },
                                          ]
                                        }
                                        timeout={300}
                                      >
                                        <Transition
                                          appear={false}
                                          enter={false}
                                          exit={true}
                                          in={true}
                                          mountOnEnter={false}
                                          onDeleteQuestionnaire={[Function]}
                                          onEnter={[Function]}
                                          onEntered={[Function]}
                                          onEntering={[Function]}
                                          onExit={[Function]}
                                          onExited={[Function]}
                                          onExiting={[Function]}
                                          questionnaires={
                                            Array [
                                              Object {
                                                "actions": Object {
                                                  "delete": true,
                                                },
                                                "comments": Object {
                                                  "comments": 10,
                                                  "count": 0,
                                                  "unread": true,
                                                },
                                                "createdAt": "01/01/1970",
                                                "id": 1,
                                                "sections": Array [
                                                  Object {
                                                    "id": 5,
                                                    "pages": Array [
                                                      Object {
                                                        "id": 10,
                                                      },
                                                    ],
                                                  },
                                                ],
                                                "theme": "default",
                                                "title": "Test questionnaire",
                                              },
                                            ]
                                          }
                                          timeout={300}
                                          unmountOnExit={false}
                                        >
                                          <QuestionnairesPage__TR
                                            onDeleteQuestionnaire={[Function]}
                                            questionnaires={
                                              Array [
                                                Object {
                                                  "actions": Object {
                                                    "delete": true,
                                                  },
                                                  "comments": Object {
                                                    "comments": 10,
                                                    "count": 0,
                                                    "unread": true,
                                                  },
                                                  "createdAt": "01/01/1970",
                                                  "id": 1,
                                                  "sections": Array [
                                                    Object {
                                                      "id": 5,
                                                      "pages": Array [
                                                        Object {
                                                          "id": 10,
                                                        },
                                                      ],
                                                    },
                                                  ],
                                                  "theme": "default",
                                                  "title": "Test questionnaire",
                                                },
                                              ]
                                            }
                                          >
                                            <tr
                                              className="c17"
                                            >
                                              <QuestionnairesPage__TD>
                                                <td
                                                  className="c18"
                                                >
                                                  <QuestionnairesPage__Link
                                                    aria-label="Test questionnaire"
                                                    title="Test questionnaire"
                                                    to="/questionnaire/1/design/5/10/"
                                                  >
                                                    <NavLink
                                                      activeClassName="active"
                                                      aria-label="Test questionnaire"
                                                      className="c19"
                                                      title="Test questionnaire"
                                                      to="/questionnaire/1/design/5/10/"
                                                    >
                                                      <Route
                                                        path="/questionnaire/1/design/5/10/"
                                                      >
                                                        <Link
                                                          aria-label="Test questionnaire"
                                                          className="c19"
                                                          replace={false}
                                                          title="Test questionnaire"
                                                          to="/questionnaire/1/design/5/10/"
                                                        >
                                                          <a
                                                            aria-label="Test questionnaire"
                                                            className="c19"
                                                            href="/questionnaire/1/design/5/10/"
                                                            onClick={[Function]}
                                                            title="Test questionnaire"
                                                          >
                                                            Test questionnaire
                                                          </a>
                                                        </Link>
                                                      </Route>
                                                    </NavLink>
                                                  </QuestionnairesPage__Link>
                                                </td>
                                              </QuestionnairesPage__TD>
                                              <QuestionnairesPage__TD>
                                                <td
                                                  className="c18"
                                                >
                                                  1/1/1970
                                                </td>
                                              </QuestionnairesPage__TD>
                                              <QuestionnairesPage__TD>
                                                <td
                                                  className="c18"
                                                >
                                                  default
                                                </td>
                                              </QuestionnairesPage__TD>
                                              <QuestionnairesPage__TD>
                                                <td
                                                  className="c18"
                                                />
                                              </QuestionnairesPage__TD>
                                              <QuestionnairesPage__TD>
                                                <td
                                                  className="c18"
                                                />
                                              </QuestionnairesPage__TD>
                                              <QuestionnairesPage__TD>
                                                <td
                                                  className="c18"
                                                >
                                                  <DeleteQuestionnaireButton
                                                    onClick={[Function]}
                                                  >
                                                    <QuestionnairesPage__StyledButton
                                                      onClick={[Function]}
                                                      title="Delete questionnaire"
                                                    >
                                                      <Button
                                                        className="c20"
                                                        onClick={[Function]}
                                                        title="Delete questionnaire"
                                                      >
                                                        <Button__StyledButton
                                                          className="c20"
                                                          onClick={[Function]}
                                                          title="Delete questionnaire"
                                                        >
                                                          <button
                                                            className="c20 c21"
                                                            onClick={[Function]}
                                                            title="Delete questionnaire"
                                                          />
                                                        </Button__StyledButton>
                                                      </Button>
                                                    </QuestionnairesPage__StyledButton>
                                                  </DeleteQuestionnaireButton>
                                                </td>
                                              </QuestionnairesPage__TD>
                                            </tr>
                                          </QuestionnairesPage__TR>
                                        </Transition>
                                      </CSSTransition>
                                    </tbody>
                                  </TBody>
                                </TransitionGroup>
                              </table>
                            </QuestionnairesPage__Table>
                          </ExistingQuetionnairesTable>
                        </div>
                      </Panel__Panel>
                    </Panel__CenteredPanel>
                  </div>
                </QuestionnairesPage__Center>
              </main>
            </BaseLayout__Main>
          </div>
        </BaseLayout__Wrapper>
      </ThemeProvider>
    </App>
  </BaseLayout>
</Questionnaires>
`;

exports[`containers/Questionnaires should render an icon when there are comments 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel>
      <ExistingQuetionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={
          Array [
            Object {
              "actions": Object {
                "delete": true,
              },
              "comments": Object {
                "count": 10,
                "unread": false,
              },
              "createdAt": "01/01/1970",
              "id": 1,
              "sections": Array [
                Object {
                  "id": 5,
                  "pages": Array [
                    Object {
                      "id": 10,
                    },
                  ],
                },
              ],
              "theme": "default",
              "title": "Test questionnaire",
            },
          ]
        }
      />
    </Panel__CenteredPanel>
  </QuestionnairesPage__Center>
</BaseLayout>
`;

exports[`containers/Questionnaires should render when there are no questionnaires 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel>
      <ExistingQuetionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={Array []}
      />
    </Panel__CenteredPanel>
  </QuestionnairesPage__Center>
</BaseLayout>
`;

exports[`containers/Questionnaires should render when there are questionnaires 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel>
      <ExistingQuetionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={
          Array [
            Object {
              "actions": Object {
                "delete": true,
              },
              "comments": Object {
                "count": 0,
                "unread": false,
              },
              "createdAt": "01/01/1970",
              "id": 1,
              "sections": Array [
                Object {
                  "id": 5,
                  "pages": Array [
                    Object {
                      "id": 10,
                    },
                  ],
                },
              ],
              "theme": "default",
              "title": "Test questionnaire",
            },
          ]
        }
      />
    </Panel__CenteredPanel>
  </QuestionnairesPage__Center>
</BaseLayout>
`;

exports[`containers/Questionnaires should render without the delete button 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel>
      <ExistingQuetionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={
          Array [
            Object {
              "actions": Object {
                "delete": false,
              },
              "comments": Object {
                "count": 0,
                "unread": false,
              },
              "createdAt": "01/01/1970",
              "id": 1,
              "sections": Array [
                Object {
                  "id": 5,
                  "pages": Array [
                    Object {
                      "id": 10,
                    },
                  ],
                },
              ],
              "theme": "default",
              "title": "Test questionnaire",
            },
          ]
        }
      />
    </Panel__CenteredPanel>
  </QuestionnairesPage__Center>
</BaseLayout>
`;
